# LightSky

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.txt  LightSky Framework.mm  LightSky Resources.mm  Mesh.mm  README.md  Resource management.mm  Scene.mm  atlas.cpp  atlas.h  batchState.cpp  batchState.h  boundingBox.cpp  boundingBox.h  bufferObject.h  build_freeimage.sh  check.xml  color.h  controlState.cpp  dataResource.cpp  display.cpp  drawModel.cpp  drawModel.h  external_deps.cmake  fbState.cpp  fbState.h  fontResource.cpp  fontResource.h  framebuffer.cpp  framebuffer.h  geometry.cpp  geometry.h  imageResource.cpp  lightState.cpp  lightState.h  lsBoundingBox.cpp  lsBufferObject.cpp  (+67 more)
LightDraw/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
LightGame/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
LightGame/tests/: event_test.cpp
LightMath/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
LightScript/: benchTest  sequence_test  serialize_test  test_file.lss
LightScript/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
LightScript/tests/: benchTest.cpp  sequence_test.cpp  serialize_test.cpp
LightSetup/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
LightUtils/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
LightUtils/tests/: pointer_test.cpp  tuple_test.cpp
doc/: Doxyfile  LightSky Features.mm
doc/html/: annotated.html  annotated.js  arch_8h.html  arch_8h_source.html  assert_8cpp.html  assert_8cpp_source.html  assert_8h.html  assert_8h.js  assert_8h_source.html  atlas_8cpp.html  atlas_8cpp_source.html  atlas_8h.html  atlas_8h_source.html  atlas__impl_8h.html  atlas__impl_8h_source.html  bits_8h.html  bits_8h.js  bits_8h_source.html  bits__impl_8h.html  bits__impl_8h_source.html  blend_object_8cpp.html  blend_object_8cpp_source.html  blend_object_8h.html  blend_object_8h.js  blend_object_8h_source.html  blend_object__impl_8h.html  blend_object__impl_8h_source.html  bounding_box_8cpp.html  bounding_box_8cpp_source.html  bounding_box_8h.html  bounding_box_8h_source.html  bounding_box__impl_8h.html  bounding_box__impl_8h_source.html  btree_8h.html  btree_8h.js  btree_8h_source.html  btree__impl_8h.html  btree__impl_8h_source.html  buffer_object_8cpp.html  buffer_object_8cpp.js  (+701 more)
doc/xml/: arch_8h.xml  assert_8cpp.xml  assert_8h.xml  atlas_8cpp.xml  atlas_8h.xml  atlas__impl_8h.xml  bits_8h.xml  bits__impl_8h.xml  blend_object_8cpp.xml  blend_object_8h.xml  blend_object__impl_8h.xml  bounding_box_8cpp.xml  bounding_box_8h.xml  bounding_box__impl_8h.xml  btree_8h.xml  btree__impl_8h.xml  buffer_object_8cpp.xml  buffer_object_8h.xml  buffer_object__impl_8h.xml  byte_size_8h.xml  byte_size__impl_8h.xml  classls_1_1draw_1_1atlas.xml  classls_1_1draw_1_1blend_object.xml  classls_1_1draw_1_1bounding_box.xml  classls_1_1draw_1_1buffer_object.xml  classls_1_1draw_1_1context.xml  classls_1_1draw_1_1depth_object.xml  classls_1_1draw_1_1mesh.xml  (+221 more)
include/: lightSky.h  lsAtlas.h  lsBlendObject.h  lsBlender.h  lsBoundingBox.h  lsBufferObject.h  lsColor.h  lsContext.h  lsDataResource.h  lsDepthObject.h  lsDisplay.h  lsDrawModel.h  lsFontResource.h  lsFramebuffer.h  lsGameState.h  lsGeometry.h  lsImageResource.h  lsManager.h  lsMatrixStack.h  lsMesh.h  lsMeshResource.h  lsPerlinNoise.h  lsRandom.h  lsRenderer.h  lsResource.h  lsSceneManager.h  lsSetup.h  lsShaderObject.h  lsShaderProgram.h  lsSystem.h  lsTexture.h  lsUtil.h  lsVertex.h  lsVertexArray.h
lightsky/: lightsky.h
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
src/: lightSky.cpp  lightsky.cpp  lsAtlas.cpp  lsBlendObject.cpp  lsBlender.cpp  lsBoundingBox.cpp  lsBufferObject.cpp  lsColor.cpp  lsContext.cpp  lsDataResource.cpp  lsDepthObject.cpp  lsDisplay.cpp  lsDrawModel.cpp  lsFontResource.cpp  lsFramebuffer.cpp  lsGameState.cpp  lsGeometry.cpp  lsImageResource.cpp  lsManager.cpp  lsMatrixStack.cpp  lsMesh.cpp  lsMeshResource.cpp  lsPerlinNoise.cpp  lsRandom.cpp  lsRenderer.cpp  lsResource.cpp  lsSceneManager.cpp  lsSetup.cpp  lsShaderObject.cpp  lsShaderProgram.cpp  lsSystem.cpp  lsTexture.cpp  lsUtil.cpp  lsVertex.cpp  lsVertexArray.cpp
tests/: CMakeLists.txt  Context.cpp  Context.h  ControlState.cpp  ControlState.h  Display.cpp  Display.h  HelloMeshState.cpp  HelloMeshState.h  HelloPrimState.cpp  HelloPrimState.h  HelloPropertyState.cpp  HelloPropertyState.h  HelloTextState.cpp  HelloTextState.h  MainState.cpp  MainState.h  SDL2Config.cmake  lsscript_benchmark.cpp  lsscript_sequencing.cpp  lsscript_serializing.cpp  lsutils_tuple_test.cpp  main.cpp  meshManager.cpp  texture.h
tests/Framebuffer Test/: context.cpp  controlState.cpp  controlState.h  display.cpp  eventState.cpp  eventState.h  fbState.cpp  fbState.h  fb_test_debug  main.cpp  main.h  mainSystem.cpp  mainSystem.h  test_scene.dae  testmesh.blend  testmesh.dae  uiState.cpp  uiState.h
tests/Framebuffer Test/fb_test_debug.dSYM/Contents/: Info.plist
tests/Framebuffer Test/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
tests/Framebuffer Test/nbproject/private/: configurations.xml  private.xml
tests/Framebuffer_Test/: controlState.h  fbState.cpp  fbState.h  main.cpp  main.h  uiState.cpp  uiState.h
(+658 files in other folders)
